--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "anx7625-2"
+name = "anx7625"
 version = "0.1.0"
 edition = "2021"
 build = "build.rs"
@@ -7,6 +7,9 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tinyrlibc = "0.2.1"
+embedded-hal = "0.2"
+log = { version = "0.4", default-features = false }
 
 [build-dependencies]
 cc = "1.0"
